# remote-yt

./: .gitattributes  .gitignore  Cargo.toml  justfile  out.json
src/: format.rs  history.rs  job.rs  main.rs  meta.rs  queue.rs  rpc.rs  vlc.rs  yt_dlp.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: animated-border.module.css  clear-all-button.tsx  form.tsx  history.tsx  now-playing.tsx  player-controls.tsx  player-progress.tsx  queue.tsx  video-meta.tsx
ui/src/lib/: commands.ts  format-time.ts
ui/src/types/: inspect.ts  queue.ts
