[package]
name = "remote-yt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.2"
log = "0.4.27"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["io-util", "macros", "process", "rt", "time"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
