[package]
name = "remote-yt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
glob = "0.3.2"
reqwest = { version = "0.12.22", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["io-util", "macros", "process", "rt", "time"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.6", features = ["compression-gzip", "compression-deflate", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
